# scramble_gen

./: Cargo.toml  benchmark.sh
.cargo/: config.toml
scramble_bin/: main.rs
scramble_lib/: lib.rs
src/: main.rs
